[project]
name = "mastering-python"
version = "0.1.0"
description = ""
authors = [
    {name = "bnpysse",email = "bnpysse@aliyun.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hupper (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
